Adding component with parameters

--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
         <p>In this workshop, we will create new custom HTML Components</p>
 
         <hello-world></hello-world>
-
-        <button onclick="removeHelloWorld()">Click me</button>
+        <hello-world-with-params name="Meetup"></hello-world-with-params>
         
+        <div>
+            <button onclick="removeHelloWorld()">Click me to remove Hello World</button>                
+        </div>
+        <div>
+            <input type="text" id="hello-world-param">        
+            <button onclick="changeHelloWorldParam()">Click me to change Hello World's parameter</button>        
+        </div>
+
         <script src="src/components/hello-world.js"></script>
+        <script src="src/components/hello-world-with-params.js"></script>
         <script>
             function removeHelloWorld(){
                 console.log("Called!");
 
                 const helloElement = document.getElementsByTagName("hello-world")[0];
                 helloElement.parentNode.removeChild(helloElement);
+            }
+
+            function changeHelloWorldParam(){
+                const helloParamElement = document.getElementsByTagName("hello-world-with-params")[0];
+                document.getElementsByTagName("hello-world-with-params")[0].setAttribute("name", "plop");
             }
         </script>
     </body>
