Creates first version of cat image component

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
         <hello-world></hello-world>
         <hello-world-with-params name="Meetup"></hello-world-with-params>
-        
+        <div>
+            <cat-img></cat-img>
+        </div>        
         <div>
             <button onclick="removeHelloWorld()">Click me to remove Hello World</button>                
         </div>
@@ -18,8 +20,10 @@
             <button onclick="changeHelloWorldParam()">Click me to change Hello World's parameter</button>        
         </div>
 
+
         <script src="src/components/hello-world.js"></script>
         <script src="src/components/hello-world-with-params.js"></script>
+        <script src="src/components/cat-img.js"></script>
         <script>
             function removeHelloWorld(){
                 console.log("Called!");
