First version of cat img with placeholder

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <hello-world-with-params name="Meetup"></hello-world-with-params>
         <div>
             <cat-img></cat-img>
+        </div>    
+        <div>
+            <cat-img-fast></cat-img-fast>
         </div>        
         <div>
             <button onclick="removeHelloWorld()">Click me to remove Hello World</button>                
@@ -23,6 +26,7 @@
         <script src="src/components/hello-world.js"></script>
         <script src="src/components/hello-world-with-params.js"></script>
         <script src="src/components/cat-img.js"></script>
+        <script src="src/components/cat-img-fast.js"></script>
         <script>
             function removeHelloWorld(){
                 console.log("Called!");
